fixed ul alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@ h2, h3, h4 {
 }
 
 ul {
-  padding: 0 0 .5rem .5rem;
+  padding: 0 0 .5rem 0;
   margin: 0;
 }
 
